--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
+<html>
+    <style>
+     video{
+         width:800px;
+     }
+     .container{
+        align-content: center;
+        justify-content: center;
+        text-align: center;
+     }
+     h1{
+         color: #44C7F4;
+         font-size: 60px;
+         padding-top:20px;
+     }
+    
+    </style>
+<body>
+    
+<section class="container">
+    <h1>Install</h1>
+    <video src="./mp4/00_init.mp4" controls></video>
+    <h1>Init</h1>
+    <video src="./mp4/01_install.mp4" controls></video>
 
+    <h1>Add</h1>
+    <video src="./mp4/02_add.mp4" controls></video>
+
+    <h1>Add Many</h1>
+    <video src="./mp4/03_add_many.mp4" controls></video>
+
+    <h1>Add Error</h1>
+    <video src="./mp4/04_add_error.mp4" controls></video>
+
+    <h1>Remove</h1>
+    <video src="./mp4/05_remove.mp4" controls></video>
+
+    <h1>Push</h1>
+    <video src="./mp4/06_push.mp4" controls></video>
+
+    <h1>Push with Session</h1>
+    <video src="./mp4/07_push_w_session.mp4" controls></video>
+
+    <h1>Create</h1>
+    <video src="./mp4/08_create.mp4" controls></video>
+
+    <h1>Update</h1>
+    <video src="./mp4/09_update.mp4" controls></video>
+
+    <h1>Verify</h1>
+    <video src="./mp4/10_verify.mp4" controls></video>
+
+    <h1>Status</h1>
+    <video src="./mp4/11_status.mp4" controls></video>
+
+    <h1>Session</h1>
+    <video src="./mp4/12_session.mp4"controls></video>
+
+    <h1>Set-Admin</h1>
+    <video src="./mp4/13_set-admin.mp4"controls></video>
+
+    <h1>Verbose Error</h1>
+    <video src="./mp4/14_verbose_err.mp4"controls></video>
+
+    <h1>Verbose OK</h1>
+    <video src="./mp4/15_verbose_ok.mp4"controls></video>
+</section>
+</body>
+
+
+</html>
